[tool.poetry]
name = "sub_enum"
version = "0.0.7"
description = "Script to retrieve subdomains from given domain"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.4"
colorama = "^0.4.5"
dnspython = "^2.6.1"
lxml = "^4.9.1"
prettytable = "^3.3.0"
validators = "^0.20.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
